# PlanetC

./: AUTHORS  ChangeLog  README.md
stellarium/: CMakeLists.txt  README-PLANETC
stellarium-0.14.2/: CMakeLists.txt  mystellarium.iss.cmake  stellarium.iss.cmake
stellarium-0.14.2/data/: default_config.ini
stellarium-0.14.2/plugins/MeteorShowers/src/: MeteorShower.cpp  MeteorShower.hpp
stellarium-0.14.2/plugins/PlanetC/: CMakeLists.txt
stellarium-0.14.2/plugins/PlanetC/resources/: PlanetC.qrc  config.ini  example.ssc  planetc.ssc  style.css
stellarium-0.14.2/plugins/PlanetC/src/: CMakeLists.txt  PlanetC.cpp  PlanetC.hpp  PlanetC_DateTimeDialog.cpp  PlanetC_DateTimeDialog.hpp  PlanetC_Settings.cpp  PlanetC_Settings.hpp  PlanetC_UI.cpp  PlanetC_UI.hpp  PlanetC_VideoPlayer.cpp  PlanetC_VideoPlayer.hpp  PlanetC_Widgets.hpp  planetc_Settings.ui  planetc_UI.ui
stellarium-0.14.2/src/: CMakeLists.txt  main.cpp  ui_searchDialogGui.h
stellarium-0.14.2/src/core/: StelApp.cpp  StelMovementMgr.cpp  StelObject.cpp
stellarium-0.14.2/src/core/modules/: Constellation.cpp  Constellation.hpp  ConstellationMgr.cpp  GridLinesMgr.cpp
stellarium-0.14.2/src/gui/: Dialog.cpp  Dialog.hpp  SearchDialog.cpp  StelDialog.hpp
stellarium-0.14.2/src/scripting/: ScreenImageMgr.cpp  ScreenImageMgr.hpp  StelMainScriptAPI.cpp  StelMainScriptAPI.hpp  StelScriptMgr.cpp  StelScriptMgr.hpp
stellarium/cmake/: stellarium.iss.cmake
stellarium/data/: default_config.ini
stellarium/plugins/MeteorShowers/src/: MeteorShower.cpp  MeteorShower.hpp
stellarium/plugins/PlanetC/: CMakeLists.txt
stellarium/plugins/PlanetC/resources/: #config.ini#  config.ini  example.ssc  planetc.ssc  style.css
stellarium/plugins/PlanetC/src/: CMakeLists.txt  PlanetC.cpp  PlanetC.hpp  PlanetC_DateTimeDialog.cpp  PlanetC_DateTimeDialog.hpp  PlanetC_Settings.cpp  PlanetC_Settings.hpp  PlanetC_UI.cpp  PlanetC_UI.cpp~  PlanetC_UI.hpp  PlanetC_VideoPlayer.cpp  PlanetC_VideoPlayer.hpp  PlanetC_Widgets.hpp  planetc_DateTimeDialogGui.ui  planetc_Settings.ui  planetc_UI.ui  planetc_UI.uiGIUSTO  planetc_cssedit.ui
stellarium/src/: StelMainView.cpp  StelMainView.hpp  main.cpp  ui_searchDialogGui.h
stellarium/src/core/: StelApp.cpp  StelMovementMgr.cpp  StelObject.cpp  StelViewportEffect.cpp
stellarium/src/core/modules/: Constellation.cpp  Constellation.hpp  ConstellationMgr.cpp  GridLinesMgr.cpp
stellarium/src/gui/: Dialog.cpp  Dialog.hpp  SearchDialog.cpp  StelDialog.hpp
stellarium/src/scripting/: ScreenImageMgr.cpp  ScreenImageMgr.hpp  StelMainScriptAPI.cpp  StelMainScriptAPI.hpp  StelScriptMgr.cpp  StelScriptMgr.hpp
